# cpc_project

./: .env.example  .gitignore  Makefile  README.md  analyze_results.py  main.py  pyproject.toml
apis/: README.md  __init__.py  conditions_api.py  hcpcs_api.py  icd10cm_api.py  procedures_api.py
cpc_agent/: README.md  __init__.py  agent.py  logger.py  models.py  tools.py
cpc_agent/agents/: __init__.py  cpt_specialist.py  hcpcs_specialist.py  icd10_specialist.py  medical_knowledge_agent.py  question_analyzer.py
cpc_benchmark/: __init__.py  benchmark.py  evaluator.py  models.py  runner.py
cpc_parser/: README.md  __init__.py  parse_pdf.py  schema.py
cpc_tools/: README.md  __init__.py  lookup_table.py  medical_terminology.py
cpc_tools/parsers/: __init__.py  base_parser.py  cpt_parser.py  hcpcs_parser.py  icd10_parser.py
cpc_tools/scripts/: process_medical_data.py
cpc_tools/vectorizer/: __init__.py  embedding_generator.py  medical_vectorizer.py
scripts/: benchmark_all.py  parse_all.py  process_medical_data.py  run_cpc_agent.py
tests/: test_schema.py  test_validate_data.py  validate_data.py
